--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "jest-mock-axios": "^4.7.0-beta",
+    "msw": "^0.47.4",
+    "pretty-print-json": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-json-pretty": "^2.2.0",
     "react-jsonschema-form": "^1.8.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.6",
@@ -19,7 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --verbose --coverage",
+    "test-watch": "jest --watchAll --verbose --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
